Fix overlapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,8 @@ a{
   margin-top: 30px;
   gap: 40px;
   font-size: 20px;
+  
+
 }
 
 .textcontainer{
@@ -70,6 +72,7 @@ a{
   width: 0;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
 }
 
 h2{
